Fixed open folder overlaping modal

--- a/style.css
+++ b/style.css
@@ -471,7 +471,7 @@ nav div {
 	/* Hidden by default */
 	position: fixed;
 	/* Stay in place */
-	z-index: 2;
+	z-index: 4;
 	/* Sit on top */
 	left: 0;
 	top: 0;
